--- a/assets/files/resume.html
+++ b/assets/files/resume.html
@@ -426,14 +426,14 @@ blockquote,
                 </div>
                 <div class="row">
                   <div class="job-details col-xs-11">
-                    <div class="profession">Princial Developer</div>
+                    <div class="profession">Principal Developer</div>
                     <div class="description">
-                      Responsible for architecting and developing FINRA's Data Intake Platform successor as cloud native for existing Data Intake platform. Focused on designing and build out of the product in AWS. Key contributor in developing Business Rules Engine for intake processing. Current DataIntake Platform takes in Million fillings a year. Key contributor in helping Finra modernizing CRD with latest technologies as part of cloud initiative.
+                      Responsible for architecting and developing FINRA's Data Intake Platform successor as cloud native for existing Data Intake platform. Focused on designing and build out of the product in AWS. Key contributor in developing Business Rules Engine for intake processing. Current DataIntake Platform takes in A Million fillings a year. Key contributor in helping Finra modernizing CRD with the latest technologies as part of cloud initiative.
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
                         <li class="list-group-item">Designed and developed cloud native data intake platform</li>
                         <li class="list-group-item">Used Node.js for authoring AWS lambdas</li>
-                        <li class="list-group-item">Used Python for developing a random forrest ML algorithm</li>
+                        <li class="list-group-item">Used Python for developing a random forest ML algorithm</li>
                       </ul>
                     </div>
                   </div>
@@ -485,7 +485,7 @@ blockquote,
                   <div class="job-details col-xs-11">
                     <div class="profession">Senior Developer (Contract position)</div>
                     <div class="description">
-                      Built a Solar Easement System to manage easements for setting up solar farms in state of Michigan. Developed REST api's to support billing modernization and used RichFaces to develop user entry screens.
+                      Built a Solar Easement System to manage easements for setting up solar farms in state of Michigan. Created REST APIs to support billing modernization and used RichFaces to develop user entry screens.
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
                         <li class="list-group-item">Used RichFaces with JSF to create data entry and reporting screens</li>
@@ -513,7 +513,7 @@ blockquote,
                       Worked on product Currian by providing support for new features
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
-                        <li class="list-group-item">Developed eclipse plugin to convert xml to JIL (Job information language)</li>
+                        <li class="list-group-item">Created eclipse plugin to convert xml to JIL (Job information language)</li>
                         <li class="list-group-item">Developed procedures for DB2</li>
                       </ul>
                     </div>
@@ -536,7 +536,7 @@ blockquote,
                   <div class="job-details col-xs-11">
                     <div class="profession">Developer (Contract position)</div>
                     <div class="description">
-                      Contracted to provide services to maintain and develop API's for SWOT (Single Web Ordering tool) AT&T tool for ordering wireline products like phone line, DSL, LongDistance plans etc.
+                      Contracted to provide services to maintain and develop API's for SWOT (Single Web Ordering tool) AT&T tool for ordering wire line products like wired line, DSL, Long Distance plans etc.
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
                         <li class="list-group-item">Developed Jython based tool to do websphere resource automation</li>
