--- a/assets/files/resume.html
+++ b/assets/files/resume.html
@@ -432,8 +432,8 @@ blockquote,
                       <div class="highlights">Highlights</div>
                       <ul class="list-group">
                         <li class="list-group-item">Designed and developed cloud native data intake platform</li>
-                        <li class="list-group-item">Used Node.js for authoring AWS lambdas</li>
-                        <li class="list-group-item">Used Python for developing a random forest ML algorithm</li>
+                        <li class="list-group-item">Enhanced CRD systems as part of modernization</li>
+                        <li class="list-group-item">Redesigned most of the on-prem apps as cloud native applications using micro services architecture</li>
                       </ul>
                     </div>
                   </div>
